web/src/components/InlineFakeBlock/InlineFakeBlock.module.css
.inlineFakeBlock {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  align-self: center;
  width: var(--line-height);
  z-index: -1;
}

.inlineFakeBlock > * {
  position: absolute;
  transform: translate(0, -50%);
  width: 100%;
  height: auto;
}

